--- a/doc/sections/literature.tex
+++ b/doc/sections/literature.tex
@@ -5,6 +5,118 @@
 \begin{document}
 
 \section{Literature review}
+The existing work and literature on object recognition is extensive. The task
+of classifying images based on the content is here approached with two
+perspectives. Identify regions of the picture as a representation of some
+object. The other is the comparing technical features of picture without
+identification of objects in the picture. Such information is accessible from
+the picture. A database of objects in the training set is needed for the other.
+
+For classifying pictures based on objects they represent it is often needed to
+normalize intensity information in them. Histogram equalization brings
+properties of the objects more accessible and more independent from properties
+of images.
+
+To classify or cluster and classify images a method of comparing the vector of
+image data with other vectors is sometimes used with neural net solutions like
+CNN. To provide valid results, they are trained with a set of pictures. The net
+is given response about the correctness of the answer for each of the training
+pictures, and each picture is potentially used many times in the random order.
+Values of features and regions evolve in the net without user directly
+interfering. Other methods require more explicit information mining from the
+picture.
+
+\subsection{Feature extraction and region processing}
+A region, an area in the picture, is sometimes an identifiable object in the
+picture. Even if it is the goal to classify the main object of the picture,
+sub-objects are often the handle for the class. For example, with the
+information of the round objects the task of classification of the main object
+is simplified. Convolutional networks do the process sometimes implicitly.
+
+Generally, classification / training phase is faster or more accurate, if some
+feature extraction is done to make the process specific for the task.
+
+The color information, often Lab, grayscale intensities, statistical and
+frequency level information are examples of features of the whole picture. They
+are used for region analysis also.
+
+To get regions or image segments it is he histograms first. From intensity
+values of either color or grayscale, partitions separated from the rest, are
+potential regions. A binary image is separated, outline i.e. border is
+extracted. Remainder of the picture is returned to histogram and the process is
+repeated.
+
+Level sets and snakes are used to improve quality of the region. It is possible
+to get watertight borderlines without noise by applying those methods.
+
+Some candidates for the region features are convexity, cardinal line, normal
+lines of cl, statistics of length of normal lines, skeleton of the region,
+Area, length, width.
+
+The boundary is one of the primary sources for the feature mining. Examples of
+methods used with it are:
+
+\begin{itemize}
+    \item Chain Code, a vector of vectors describing segments of the boundary.
+        With them many indicators of the region are possible. Area, height,
+        width, cardinal lines and convexity are among possible results of the
+        function with chain code as a parameter.
+    \item Fourier descriptor, a complex valued vector about the boundary. It is
+        used to identify, scale, rotate, and translate the boundary for the
+        similarity measurement.
+    \item Skeleton of the region. Middle lines of the region evaluated from the
+        boundary. .
+    \item The Hough transformation allows the search of ridges, curves and
+        round or elliptical areas from the picture. Shapes and sizes are not
+        limited.
+    \item Morphological operators. Dilating and eroding binary images with
+        different kernels. For example, to extraction of outlines or reduced
+        noise from the picture. Opening and closing operations combination of
+        two main processing styles
+\end{itemize}
+
+Also, the background is potentially processed as a region. The Texture
+information is also used as a feature. Use morphological operators and
+frequency transformations are possible solutions to create selector for the
+texture.
+
+\subsection{Self Organizing Map}
+The Self Organizing Map, SOM is a Neural Net model for dimension reduction.
+From training material each picture is associated with a feature vector. Number
+of pictures is the original dimension count and reduced dimension count is the
+number of the classes of the pictures are representing, like cars, cats and so
+on. For each class there is a weight vector in  the result space. The algorithm
+starts random input vector. Euclidean distance is evaluated to each weight
+vector, and nearest is considered the closest match. Weights of the feature
+dimensions of the closest weight vector are adjusted to minimize the average
+distance within the group.
+
+In SOM map space is number of weight vectors with the dimensionality of input
+vectors. In image processing dimensionality of the feature space. Weight
+vectors represent classes similarly to KNN-clustering. When a new vector, i.e.
+image is added to the system, Euclidean distances to weight vectors are
+evaluated. Weights of the closest class are adjusted with a function
+\eqref{eqn:som_w} to make the weight vector closer to the new vector.
+
+\begin{equation}
+    W_v(s+1) = W_v(s) + \theta(u, v, s) \cdot \alpha(s) \cdot (D(t) - W_v(s))
+    \label{eqn:som_w}
+\end{equation}
+
+\begin{itemize}
+    \item $W_v$: Weight vector closest to vector $v$
+    \item $\theta$: Distance function giving distance from $u$ to $v$ in step
+        $s$
+    \item $\alpha$: Learning rate function, it gets smaller when the space size
+        increases
+    \item $D$: Input vector indexed with $t$
+    \item $s$: step index
+    \item $u$: index to best matching class vector
+    \item $v$: index to a neuron in the goal space
+\end{itemize}
+
+\subsection{Convolutional Neural Networks}
+% TODO intro
 
 \subsubsection{AlexNet}
 AlexNet\cite{Alex}, which has been trained over a million images in the
@@ -17,19 +129,34 @@ max-pooling layers and three fully-connected layers. To reduce overfitting in
 the fully-connected layers the authors had  employed dropout layers in
 conjuction with ReLU that proved to be very effective.
 
-A brief descriotion of the fuctions of various AlexNet layers is provided below:
+A brief descriotion of the fuctions of various AlexNet layers is provided
+below:
 
 \begin{itemize}
-	\item Convolutional Layer puts the images from the previous layer through a set of convolutional filters which extract a particular feature;
-	\item ReLU Layer maps negative values to zero which allows faster training while maintaining the positive ones;
-	\item Pooling Layer performs downsampling, consequently, reduces the number of CNN parameters;
-    	\item Batch Normalization Layer speeds up training by normalizing each of the minibatches;
-    	\item Dropout Layer randomly sets the input elements to zero with a given probability and hence protects the network from overfitting;
-    	\item Fully Connected Layer identifies the larger patterns by combining all the features learned from the previous layers.
+    \item Convolutional Layer puts the images from the previous layer through a
+        set of convolutional filters which extract a particular feature;
+    \item ReLU Layer maps negative values to zero which allows faster training
+        while maintaining the positive ones;
+    \item Pooling Layer performs downsampling, consequently, reduces the number
+        of CNN parameters;
+        \item Batch Normalization Layer speeds up training by normalizing each
+            of the minibatches;
+        \item Dropout Layer randomly sets the input elements to zero with a
+            given probability and hence protects the network from overfitting;
+        \item Fully Connected Layer identifies the larger patterns by combining
+            all the features learned from the previous layers.
 \end{itemize}
 
 \subsubsection{ResNet}
-A residual neural network (ResNet) is an artificial neural network (ANN) of a kind that builds on constructs known from pyramidal cells in the cerebral cortex \cite{Res}. They are typically built to overcome the vanishing gradient problem of deep networks wherin the gradient becomes infinitively small due to repeated backpropogations which typically leads to degradation of the perfromance of the network. ResNet utilizes identity shortcut connection that skips one or more layers, or shortcuts to jump over some layers. Typical ResNet models are implemented with double- or triple- layer skips that contain nonlinearities (ReLU) and batch normalization in between
+A residual neural network (ResNet) is an artificial neural network (ANN) of a
+kind that builds on constructs known from pyramidal cells in the cerebral
+cortex \cite{Res}. They are typically built to overcome the vanishing gradient
+problem of deep networks wherin the gradient becomes infinitively small due to
+repeated backpropogations which typically leads to degradation of the
+perfromance of the network. ResNet utilizes identity shortcut connection that
+skips one or more layers, or shortcuts to jump over some layers. Typical ResNet
+models are implemented with double- or triple- layer skips that contain
+nonlinearities (ReLU) and batch normalization in between
 
 \subsubsection{Transfer Learning}
 Until the inception of transfer learning, conventional machine learning
@@ -52,5 +179,5 @@ exisiting CNN network or by means of an SVM classifier trained on the extracted
 features. The results obtained were largely encouraging, about 90 percent of
 the pictures were identified correctly. Although, SVM results were slightly
 better.
-    
+
 \end{document}
