add short intro, describe work division (incomplete)

--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -6,18 +6,29 @@
 \begin{document}
 
 \section{Introduction}
-% TODO
+An object recognition project has been carried out by three students as part of
+the course \courseName{} at \courseUniversity. Object recognition is a field of
+computer vision attempting to implement software that can recognize objects in
+images just like humans can do with ease.
 
 \subsection{Task}
-The task of classifying natural images of 8 different types of objects was given
-to our project group. Each image contains one of the objects and should be
-classified as such. The 8 different possible objects are airplanes, cars, cats,
-dogs, flowers, fruits, motorbike and people. In order to implement and
-evauluate a classifier; a labeled dataset of 6899 images was given as well. The
-dataset was already split into training and test sets such that the test set
-consisted of one third of the images.
+The task of classifying natural images of 8 different types of objects was
+given to our project group. Each image contains one of the objects and the
+classifier should determine which of these 8 different object the image
+contains. The 8 different possible objects are airplanes, cars, cats, dogs,
+flowers, fruits, motorbike and people. A labeled dataset of 6899 images was
+given as well in order to train and evauluate a classifier. The dataset was
+already split into training and test sets.
 
 \subsection{Work division}
-% TODO
+The project group consists of three students. Each student's responsibility and
+contribution is listed below.
+
+\begin{description}
+    \item[\authorA] Implementation of SOM experiments and SOM classifier,
+        feature extractions (SURF, LBP, grayscale).
+    \item[\authorB] % TODO
+    \item[\authorC] % TODO
+\end{description}
     
 \end{document}
