--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -27,7 +27,8 @@ contribution is listed below.
 \begin{description}
     \item[\authorA] Implementation of SOM experiments and SOM classifier,
         feature extractions (SURF, LBP, grayscale).
-    \item[\authorB] % TODO
+    \item[\authorB] Implementation of Transfer Learning and Feature Extraction
+        from Pre-Trained Models.
     \item[\authorC] % TODO
 \end{description}
     
