--- a/doc/sections/literature.tex
+++ b/doc/sections/literature.tex
@@ -117,6 +117,13 @@ evaluated. Weights of the closest class are adjusted with a function
 
 \subsection{Convolutional Neural Networks}
 % TODO intro
+Several pre-trained models used in transfer learning are based on large convolutional neural networks (CNN).Its high performance and its easiness in training are two of the main factors for its popularity in Machine Vision applications.
+A typical CNN consists of two parts:
+\begin{enumerate}
+	\item A convolutional base, composed of a stack of convolutional and pooling layers. The main goal of the convolutional base is to generate features from the image
+	\item A classifier, composed of fully connected layers that seek to classify the images based on the detected features.
+\end{enumerate}
+An important aspect of these CNNs is that they can automatically learn hierarchical feature representations. This implies that features computed by the first layer of the CNN are very general and can be easily reused in different domains, while on the other hand the features computed by the last layer of the CNN are specific and depend on the chosen dataset and task at hand. A few of the popular pre-trained models based on CNN are described in the upcoming subsections.
 
 \subsubsection{AlexNet}
 AlexNet\cite{Alex}, which has been trained over a million images in the
