add ref to surf

--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -47,4 +47,13 @@
   title={Saimaa ringed seal fur pattern extraction for identification purposes},
   author={Nepovinnykh, Ekaterina and others},
   year={2017}
-}}
+}
+
+@article{bay-surf,
+    author = "Herbert Bay and Tinne Tuytelaars and Luc Van Gool",
+    title = "SURF: Speeded Up Robust Features",
+    publisher = "ETH Zurich",
+    journal = "",
+    year = 2006,
+    volume = "",
+}
