--- a/doc/format.tex
+++ b/doc/format.tex
@@ -7,6 +7,7 @@
 % use space between paragraphs
 \usepackage{parskip}
 \usepackage{graphicx}
+\usepackage{subcaption}
 
 % urls
 \usepackage{hyperref}
