note that images are cropped

--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -18,7 +18,8 @@ classifier should determine which of these 8 different object the image
 contains. The 8 different possible objects are airplanes, cars, cats, dogs,
 flowers, fruits, motorbike and people. A labeled dataset of 6899 images was
 given as well in order to train and evauluate a classifier. The dataset was
-already split into training and test sets.
+already split into training and test sets. The images of the dataset are also
+cropped so that the majority of the image consists of the object.
 
 \subsection{Work division}
 The project group consists of three students. Each student's responsibility and
