add sample test to results, discuss choice of feature, transferability

--- a/doc/format.tex
+++ b/doc/format.tex
@@ -6,8 +6,11 @@
 
 % use space between paragraphs
 \usepackage{parskip}
+
+% figures
 \usepackage{graphicx}
 \usepackage{subcaption}
+\usepackage[table]{xcolor}
 
 % urls
 \usepackage{hyperref}
