--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -46,9 +46,7 @@ of RAM. While the initial results from the trained classier were promising, by
 means of training data augmentation and optimization of the training parameters
 we are able to acheive a very accurate classifier while also reducing the
 training time by half. Table 2 depicts the effect of training parameters on the
-classifeir performance. The choice of the optimization parameters and their
-corresponding effects have been described briefly in the follwoing
-sub-sections.
+classifeir performance. 
 
 \begin{table}[h]
 \centering
