add tapio work div

--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -30,7 +30,8 @@ contribution is listed below.
         feature extractions (SURF, LBP, grayscale).
     \item[\authorB] Implementation of Transfer Learning and Feature Extraction
         from Pre-Trained Models.
-    \item[\authorC] % TODO
+    \item[\authorC] Literature review of object recognition and existing
+        methods.
 \end{description}
     
 \end{document}
