--- a/doc/sections/discussion.tex
+++ b/doc/sections/discussion.tex
@@ -15,6 +15,8 @@ outperfromed those of ResNet18 which in turn outperformed the AlexNet Features.
 Hence, the depth of the pre-trained models were of clear importance while
 utilizing such a classification approach.
 
+Transfer learning is a promising concept and use of it with other sorts of datasets would be interesting. Multidimensional time series data or three-dimensional pictures in videos are examples of possibilities.
+
 The results obtained by retraining an AlexNet were comparable, if not better,
 to those obtained by the extracted features from the the pre-trained models.
 This could be primarily attributed to the simialrity between the ImageNet
